--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
+    <!-- 
+        ---пометка для тренера---
+        1. Не стал заводить переменные для цвета, так как цвета абсолютно разные на макете и почти не повторяются, правильно или все таки стоит ?
+     -->
+
 <body>
 
     <script src="js/main.min.js"></script>
