added behavior for links

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glee | Главная</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -15,7 +16,7 @@
         2. Не уверен, что правильно сверстал Блок - users-icon
      -->
 
-     <!-- Доделать переменные -->
+<!-- Доделать переменные -->
 
 <body>
     <header class="header">
@@ -27,52 +28,52 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 Home
                                 <span class="menu__plus">+</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 About
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 Service
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 Pages
                                 <span class="menu__plus">+</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 News
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">
+                            <a class="menu__link link" href="#">
                                 Contacts
                             </a>
                         </li>
                     </ul>
                 </nav>
                 <div class="user-icons">
-                    <button class="user-icons__item user-icons__item--search" href="#">
+                    <button class="user-icons__item user-icons__item--search" type="button">
                         <span class="sr-only">Поиск</span>
                     </button>
-                    <button class="user-icons__item user-icons__item--like" href="#">
+                    <button class="user-icons__item user-icons__item--like" type="button">
                         <span class="sr-only">Понравившиеся</span>
                         <span class="user-icons__num">0</span>
                     </button>
-                    <button class="user-icons__item user-icons__item--basket" href="#">
+                    <button class="user-icons__item user-icons__item--basket" type="button">
                         <span class="sr-only">Корзина</span>
                         <span class="user-icons__num user-icons__num--basket">0</span>
                     </button>
-                    <button class="user-icons__item user-icons__item--menu" href="#">
+                    <button class="user-icons__item user-icons__item--menu" type="button">
                         <span class="sr-only">Каталог</span>
                     </button>
                 </div>
