--- a/app/page.html
+++ b/app/page.html
@@ -14,7 +14,6 @@
         ---пометка для тренера---
         1. Завел несколько переменных, но не знаю наколько правильно, в макете куча разных цветов, тяжело выделить какой-то акцентный или дефолтный
         2. Не уверен, что правильно сверстал Блок - users-icon
-        3. Форма в футере, не знаю как убрать пробел после инлайнового инпута, кроме как отрицательным марджином на след элементе (на button)
      -->
 
 <body>
@@ -87,6 +86,7 @@
     <footer class="footer">
         <div class="container">
             <ul class="footer__top">
+                <!-- ниже усложнил классы, по другому не придумал -->
                 <li class="footer__address">
                     <a class="logo footer__logo" href="#">
                         <img class="logo__image" src="images/logo.svg" alt="логотип Glee">
