--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a class="menu__link link" href="#">
+                            <a class="menu__link menu__link--active link" href="#">
                                 Home
                                 <span class="menu__plus">+</span>
                             </a>
