--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         1. Завел несколько переменных, но не знаю наколько правильно, в макете куча разных цветов, тяжело выделить какой-то акцентный или дефолтный
         2. Не уверен, что правильно сверстал Блок - users-icon
         3. Форма в футере, не знаю как убрать пробел после инлайнового инпута, кроме как отрицательным марджином на след элементе (на button)
+        4. Не знаю как в слайдере сделать так что бы можно было заменить картинку на другую и она нормально смотрелась, object-fit не помогает, обьясни пожалуйста как это сделать
      -->
 
 <body>
@@ -82,6 +83,75 @@
 
     <main class="main">
 
+        <section class="slider-top">
+            <div class="large-container slider-top__large-container">
+                <div class="container">
+                    <ul class="slider-top__wrapper">
+                        <li class="slider-top__item">
+                            <div class="slider-top__inner">
+                                <div class="slider-top__content">
+                                    <h2 class="slider-top__title">
+                                        SMART AND
+                                        RENDY
+                                    </h2>
+                                    <p class="slider-top__text">
+                                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    </p>
+                                    <a class="slider-top__link button" href="#">
+                                        Shop Now
+                                    </a>
+                                </div>
+                                <div class="slider-top__img">
+                                    <img class="slider-top__image" src="images/top-slider/1.png"
+                                        alt="картинка продукта">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slider-top__item">
+                            <div class="slider-top__inner">
+                                <div class="slider-top__content">
+                                    <h2 class="slider-top__title">
+                                        SMART AND
+                                        RENDY
+                                    </h2>
+                                    <p class="slider-top__text">
+                                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    </p>
+                                    <a class="slider-top__link button" href="#">
+                                        Shop Now
+                                    </a>
+                                </div>
+                                <div class="slider-top__img">
+                                    <img class="slider-top__image" src="images/top-slider/1.png"
+                                        alt="картинка продукта">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="slider-top__item">
+                            <div class="slider-top__inner">
+                                <div class="slider-top__content">
+                                    <h2 class="slider-top__title">
+                                        SMART AND
+                                        RENDY
+                                    </h2>
+                                    <p class="slider-top__text">
+                                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    </p>
+                                    <a class="slider-top__link button" href="#">
+                                        Shop Now
+                                    </a>
+                                </div>
+                                <div class="slider-top__img">
+                                    <img class="slider-top__image" src="images/top-slider/1.png"
+                                        alt="картинка продукта">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -97,10 +167,12 @@
                             Houston, TX 77032
                         </span>
                         <span class="footer__contact">
-                            <span class="footer__caps">Telephone: </span><a class="footer__phone link" href="tel:+8323475843">+832-347-5843</a>
+                            <span class="footer__caps">Telephone: </span><a class="footer__phone link"
+                                href="tel:+8323475843">+832-347-5843</a>
                         </span>
                         <span class="footer__contact">
-                            <span class="footer__caps">Email: </span><a class="footer__email link" href="email:contact@Glee.com">contact@Glee.com</a>
+                            <span class="footer__caps">Email: </span><a class="footer__email link"
+                                href="email:contact@Glee.com">contact@Glee.com</a>
                         </span>
                     </address>
                 </li>
@@ -174,7 +246,8 @@
                     <form class="footer__form" action="#">
                         <label>
                             <span class="sr-only">Введите email address</span>
-                            <input class="footer__input input" type="email" name="email" placeholder="Email address" required>
+                            <input class="footer__input input" type="email" name="email" placeholder="Email address"
+                                required>
                         </label>
                         <button class="footer__btn button" type="submit">Subscribe</button>
                     </form>
