--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="header">
-        <div class="large-container">
+        <div class="container container--lg">
             <div class="header__inner">
                 <a class="logo" href="#">
                     <img class="logo__image" src="images/logo.svg" alt="логотип Glee">
@@ -84,10 +84,11 @@
     <main class="main">
 
         <section class="slider-top">
-            <div class="large-container slider-top__large-container">
-                <div class="container">
-                    <ul class="slider-top__wrapper">
-                        <li class="slider-top__item">
+
+            <div class="container container--lg">
+                <ul class="slider-top__wrapper">
+                    <li class="slider-top__item">
+                        <div class="container">
                             <div class="slider-top__inner">
                                 <div class="slider-top__content">
                                     <h2 class="slider-top__title">
@@ -106,8 +107,10 @@
                                         alt="картинка продукта">
                                 </div>
                             </div>
-                        </li>
-                        <li class="slider-top__item">
+                        </div>
+                    </li>
+                    <li class="slider-top__item">
+                        <div class="container">
                             <div class="slider-top__inner">
                                 <div class="slider-top__content">
                                     <h2 class="slider-top__title">
@@ -126,8 +129,10 @@
                                         alt="картинка продукта">
                                 </div>
                             </div>
-                        </li>
-                        <li class="slider-top__item">
+                        </div>
+                    </li>
+                    <li class="slider-top__item">
+                        <div class="container">
                             <div class="slider-top__inner">
                                 <div class="slider-top__content">
                                     <h2 class="slider-top__title">
@@ -146,9 +151,9 @@
                                         alt="картинка продукта">
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
