added product-promo and design section

--- a/app/index.html
+++ b/app/index.html
@@ -519,7 +519,174 @@
                             </span>
                         </div>
                     </li>
-                    
+                </ul>
+            </div>
+
+            <div class="products-promo">
+                <div class="container container--lg">
+                    <div class="products-promo__inner">
+                        <div class="products-promo__card">
+                            <div class="products-promo__image">
+                                <img class="products-promo__img" src="images/products/lamp1.png" alt="лампа">
+                            </div>
+                            <div class="products-promo__content">
+                                <h3 class="products-promo__title">
+                                    Mirum Notare Tellus
+                                </h3>
+                                <p class="products-promo__text">
+                                    LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
+                                </p>
+                                <a class="products-promo__link button" href="#">
+                                    View More
+                                    <svg width="22px" height="9px">
+                                        <path fill-rule="evenodd" fill="rgb(67, 99, 114)"
+                                            d="M0.296,5.472 L0.288,5.470 L17.244,5.470 L17.144,8.329 C17.089,8.383 17.060,8.458 17.060,8.534 C17.060,8.611 17.089,8.684 17.144,8.738 L17.316,8.912 C17.370,8.966 17.443,8.996 17.520,8.996 C17.597,8.996 17.669,8.966 17.724,8.912 L21.916,4.700 C21.970,4.646 22.000,4.573 22.000,4.496 C22.000,4.419 21.970,4.346 21.916,4.292 L17.724,0.079 C17.669,0.026 17.597,-0.004 17.520,-0.004 C17.443,-0.004 17.370,0.026 17.316,0.079 L17.144,0.253 C17.089,0.307 17.060,0.379 17.060,0.457 C17.060,0.534 17.089,0.603 17.144,0.656 L17.257,3.521 L0.292,3.521 C0.133,3.521 -0.000,3.658 -0.000,3.817 L-0.000,5.187 C-0.000,5.346 0.137,5.472 0.296,5.472 Z" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="products-promo__card">
+                            <div class="products-promo__image">
+                                <img class="products-promo__img" src="images/products/lamp2.png" alt="лампа">
+                            </div>
+                            <div class="products-promo__content">
+                                <h3 class="products-promo__title">
+                                    Malesuada Tempor
+                                    Euismod
+                                </h3>
+                                <p class="products-promo__text">
+                                    50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
+                                </p>
+                                <a class="products-promo__link button" href="#">
+                                    View More
+                                    <svg width="22px" height="9px">
+                                        <path fill-rule="evenodd" fill="rgb(67, 99, 114)"
+                                            d="M0.296,5.472 L0.288,5.470 L17.244,5.470 L17.144,8.329 C17.089,8.383 17.060,8.458 17.060,8.534 C17.060,8.611 17.089,8.684 17.144,8.738 L17.316,8.912 C17.370,8.966 17.443,8.996 17.520,8.996 C17.597,8.996 17.669,8.966 17.724,8.912 L21.916,4.700 C21.970,4.646 22.000,4.573 22.000,4.496 C22.000,4.419 21.970,4.346 21.916,4.292 L17.724,0.079 C17.669,0.026 17.597,-0.004 17.520,-0.004 C17.443,-0.004 17.370,0.026 17.316,0.079 L17.144,0.253 C17.089,0.307 17.060,0.379 17.060,0.457 C17.060,0.534 17.089,0.603 17.144,0.656 L17.257,3.521 L0.292,3.521 C0.133,3.521 -0.000,3.658 -0.000,3.817 L-0.000,5.187 C-0.000,5.346 0.137,5.472 0.296,5.472 Z" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="design">
+            <div class="container">
+                <h2 class="title design__title">
+                    New Design
+                </h2>
+                <ul class="mix-filter design__list">
+                    <li class="mix-filter__item">
+                        <button class="mix-filter__link mix-filter__link--active link" data-filter="all" type="button">
+                            All
+                        </button>
+                    </li>
+                    <li class="mix-filter__item">
+                        <button class="mix-filter__link link" data-filter=".design-a" type="button">
+                            Furnitures
+                        </button>
+                    </li>
+                    <li class="mix-filter__item">
+                        <button class="mix-filter__link link" data-filter=".design-b" type="button">
+                            Chairs
+                        </button>
+                    </li>
+                    <li class="mix-filter__item">
+                        <button class="mix-filter__link link" data-filter=".design-c" type="button">
+                            Lighting
+                        </button>
+                    </li>
+                    <li class="mix-filter__item">
+                        <button class="mix-filter__link link" data-filter=".design-d" type="button">
+                            Decor
+                        </button>
+                    </li>
+                </ul>
+
+                <ul class="design-cards">
+                    <li class="design-cards__item mix design-a" style="background-image: url('images/design/item1.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Beat Flat Pendant
+                                Black
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                        </a>
+                    </li>
+                    <li class="design-cards__item mix design-b" style="background-image: url('images/design/item2.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Lampe Sur Pieds
+                                Bamboo
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                            <div class="design-cards__image">
+                                <img class="design-cards__img" src="" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li class="design-cards__item mix design-c" style="background-image: url('images/design/item3.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Rattan Rocking
+                                Chair
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                            <div class="design-cards__image">
+                                <img class="design-cards__img" src="" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li class="design-cards__item mix design-d" style="background-image: url('images/design/item4.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Rattan Rocking
+                                Chair
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                            <div class="design-cards__image">
+                                <img class="design-cards__img" src="" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li class="design-cards__item mix design-a" style="background-image: url('images/design/item5.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Rattan Rocking
+                                Chair
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                            <div class="design-cards__image">
+                                <img class="design-cards__img" src="" alt="">
+                            </div>
+                        </a>
+                    </li>
+                    <li class="design-cards__item mix design-b" style="background-image: url('images/design/item6.jpg');">
+                        <a class="design-cards__link" href="#">
+                            <h3 class="design-cards__title">
+                                Lampe Sur Pieds
+                                Bamboo
+                            </h3>
+                            <span class="design-cards__type">
+                                Classic
+                            </span>
+                            <div class="design-cards__image">
+                                <img class="design-cards__img" src="" alt="">
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
